--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "eslint-plugin-react": "^7.3.0",
     "eslint-plugin-standard": "^3.0.1",
     "rimraf": "^2.6.1"
+  },
+  "dependencies": {
+    "react-fontawesome": "^1.6.1"
   }
 }
